# docs/swagger.json
@@ -65,18 +65,18 @@
         },
         "/v1/block/{id}": {
             "get": {
-                "description": "Retrieves a specific block from the ledger",
+                "description": "Retrieves a specific block from the ledger. UUID or Hash are recommended for security.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "ledger"
                 ],
-                "summary": "Get block by index or hash",
+                "summary": "Get block by UUID, hash or index",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Block index or hash",
+                        "description": "Block UUID, hash or index",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -166,6 +166,9 @@
                 },
                 "timestamp": {
                     "type": "integer"
+                },
+                "uuid": {
+                    "type": "string"
                 }
             }
         },
